# polka_curses

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  conftest.py  pyproject.toml
polka_curses/: config.py  controller.py  handler.py  main.py  model.py  view.py
polka_curses/views/: blogs_page.py  book_page.py  books_page.py  expert_page.py  experts_page.py  list_page.py  lists_page.py  loading_page.py  podcasts_page.py  search_page.py  status_bar.py  tab_bar.py
polka_curses/views/widgets/: scrollable_text.py
tests/: test_config.py  test_controller.py  test_handler.py  test_main.py  test_model.py  test_view.py
tests/test_views/: test_blogs_page.py  test_book_page.py  test_books_page.py  test_expert_page.py  test_experts_page.py  test_list_page.py  test_lists_page.py  test_loading_page.py  test_podcasts_page.py  test_search_page.py  test_status_bar.py  test_tab_bar.py
